force-app/main/default/objects/TechnicalSession__c/TechnicalSession__c.object-meta.xml
<CustomObject>
    <label>Technical Session</label>
    <nameField>
        <displayFormat>TS-{0000}</displayFormat>
        <label>Technical Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technical Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>