force-app/main/default/objects/TechnicalSession__c/fields/Presenter__c.field-meta.xml
<CustomField>
    <fullName>Presenter__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Presenter</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Technical Session</relationshipLabel>
    <relationshipName>Technical_Session</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>